<resources>
    <string name="app_name">Sharengo</string>
    <string name="mystore_password" translatable="false">1WC;Xen123hb|z</string>
    <string name="preference_file_key" translatable="false">sharengopreference</string>
    <string name="preference_citiesfavourites" translatable="false">citiesfavourites</string>
    <string name="preference_lang" translatable="false">lang</string>
    <string name="preference_feeds" translatable="false">feeds</string>
    <string name="preference_tutorial" translatable="false">tutorial</string>
    <string name="preference_kml" translatable="false">kml</string>
    <string name="preference_userinfo" translatable="false">userinfo</string>
    <string name="preference_city" translatable="false">city</string>
    <string name="preference_reservation" translatable="false">reservationpreference</string>
    <string name="msg_rational_location_permission">L\'app ha bisogno dei permessi per poter funzionare.</string>
    <string name="general_login_alert">Devi effettuare l\'accesso per utilizzare questa funzionalità</string>
    <string name="general_notenabled_alert">Questa funzione sarà disponibile prossimamente.</string>
    <string name="ok">OK</string>
    <string name="cancel">ANNULLA</string>
    <string name="login">LOGIN</string>
    <string name="error_msg_network_general">Si è verificato un errore, per favore controlla la tua connessione ad internet o riprova più tardi.</string>
    <string name="error_generalerror_alert">Si è verificato un errore di connessione. Per favore riprova.</string>
    <string name="menu_home">Home</string>
    <string name="menu_welcome">Ciao, benvenuto!</string>
    <string name="menu_welcome_login">Ciao %s, bentornato!</string>
    <string name="menu_welcomef_login">Ciao %s, bentornata!</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Iscrizione</string>
    <string name="menu_rates">Tariffe</string>
    <string name="menu_profile">Area personale</string>
    <string name="menu_booking">Prenota un\'auto</string>
    <string name="menu_historic">Cronologia corse</string>
    <string name="menu_help">Richiedi assistenza</string>
    <string name="menu_faq">FAQ e tutorial</string>
    <string name="menu_buy">Acquista minuti</string>
    <string name="menu_share">Invita un amico</string>
    <string name="menu_setting">Impostazioni</string>
    <string name="menu_pin">Il tuo PIN</string>
    <string name="menu_logout">Logout</string>
    <string name="popup_home">Non hai ancora effettuato il login</string>
    <string name="popup_login">Accedi</string>
    <string name="popup_registrazione">Iscriviti</string>
    <string name="popup_message">Il servizio di carsharing è temporaneamente sospeso.\nScopri il nuovo servizio di mobilità MYSHARENGO</string>
    <string name="popup_close">Chiudi</string>
    <string name="error_generic_msg">Ops, qualche cosa è andato storto.</string>
    <string name="error_msg_no_network">Non sei connesso ad internet, per favore riprova</string>
    <string name="error_msg_server_timeout">Il Server non è raggiungibile. Per favore riprovare più tardi.</string>
    <string name="error_msg_conversion">Si è verificato un errore, per favore riprova</string>
    <string name="error_unexpected">Abbiamo riscontrato un problema. Riprova più tardi</string>
    <string name="error_msg_http_400">La tua richiesta non può essere completata (400)</string>
    <string name="error_msg_http_401">Username/Password non corrette. Per favore controlla e riprova</string>
    <string name="error_msg_http_403">Contenuto non disponibile</string>
    <string name="error_msg_http_404">Contenuti non disponibile (404)</string>
    <string name="error_msg_http_406">Dati inseriti non validi, controlla e riprova</string>
    <string name="error_msg_http_500">Abbiamo riscontrato un problema. Riprova più tardi (500)</string>
    <string name="general_notification_title" translatable="false">Share\'ngo</string>
    <string name="maps_search_placeholder">Cerca indirizzo o targa</string>
    <string name="maps_permissionlocation_alert">Share\'ngo ha bisogno dei permessi per accedere alla tua posizione. Vuoi aprire le impostazioni per abilitare la localizzazione?</string>
    <string name="maps_opendoor_action">Apri portiere</string>
    <string name="maps_bookingcar_action">Prenota auto</string>
    <string name="maps_autonomy_label">autonomia: <![CDATA[<b>%d km</b>]]></string>
    <string name="maps_distance_label">%d mt di distanza</string>
    <string name="maps_distancekm_label">%.2f km di distanza</string>
    <string name="maps_time_label">%d minuti a piedi</string>
    <string name="maps_timeh60_label">1 ora a piedi</string>
    <string name="maps_timeh_label">%d ore a piedi</string>
    <string name="maps_timehsm_label" formatted="false">%d ora e %d minuti a piedi</string>
    <string name="maps_timehm_label" formatted="false">%d ore e %d minuti a piedi</string>
    <string name="maps_closestcar_label">Auto più vicina</string>
    <string name="maps_permissionopendoor_alert">Share\'ngo ha bisogno di sapere la tua posizione per aprire le portiere. Vuoi aprire le impostazioni per abilitare la localizzazione?</string>
    <string name="maps_opendoordistance_alert">Sei troppo distante dalla Share\'ngo che hai selezionato. Potrai aprirla quando sarai in prossimità dell\'auto.</string>
    <string name="maps_searchmicrophone_message">In ascolto...</string>
    <string name="maps_feeddiscover_message">Scopri di più</string>
    <string name="maps_hidecars_alert">Attenzione! Potrai utilizzare questa funzione solo dopo aver concluso la corsa o la prenotazione attiva</string>
    <string name="search_platesharengo_label">Targa Share\'ngo</string>
    <string name="search_favoriteempty_label">Nessun preferito\nmemorizzali nella sezione impostazioni</string>
    <string name="booking_userpin_label">Il tuo pin utente: </string>
    <string name="booking_active_label">Prenotazione attiva</string>
    <string name="booking_plate_label">Targa %s</string>
    <string name="booking_expirationtime">Scade tra <![CDATA[<br><b>%s</b>]]> min</string>
    <string name="booking_opendoor_action">Apri portiere</string>
    <string name="booking_delete_action">Elimina</string>
    <string name="booking_delete_alert">Eliminando questa prenotazione, non potrai più prenotare la stessa auto nelle prossime 4 ore. Confermi di voler cancellare la prenotazione?</string>
    <string name="booking_deleteconfirm_alert">La tua prenotazione è stata annullata correttamente</string>
    <string name="booking_bookedcar_alert">Hai già una prenotazione attiva</string>
    <string name="booking_tripcar_alert">Hai già una corsa attiva</string>
    <string name="booking_other_tripcar_alert">Qualcuno sta già utilizzando questa Share\'ngo</string>
    <string name="booking_alreadybookedcar_alert">Non puoi prenotare questa auto fino a che non saranno passate 4 ore da quando hai annullato la prenotazione</string>
    <string name="booking_car_busy_alert">Quest\'auto non è disponibile, ci scusiamo per l\'inconveniente</string>
    <string name="booking_user_unauthorized_alert">Quest\'auto non è disponibile, ci scusiamo per l\'inconveniente</string>
    <string name="booking_durationtrip_label">Durata corsa: <![CDATA[<br><b>%s</b>]]></string>
    <string name="booking_tripactive_label">Corsa attiva</string>
    <string name="booking_timeend_label">Il tempo di prenotazione è scaduto, la tua prenotazione è stata annullata. Prenota un\'altra auto in mappa</string>
    <string name="tripend_title_label">Hai completato il tuo noleggio</string>
    <string name="tripend_text1_label">Attendi la chiusura delle portiere fuori dell\'auto.</string>
    <string name="tripend_text2_label">Riceverai via mail la conferma di transazione avvenuta entro 24 ore.</string>
    <string name="tripend_thanks_label">Grazie!</string>
    <string name="tripend_text3_label" formatted="false">CON IL TUO VIAGGIO HAI RISPARMIATO %.1f GRAMMI DI CO2!</string>
    <string name="tripend_historic_action">Storico corse</string>
    <string name="tripend_notification_label">Corsa completata. La corsa ha avuto durata %d minuti e si è chiusa correttamente. Ti ringraziamo per aver usato Share\'ngo</string>
    <string name="tripstart_notification_label">Le portiere si apriranno fra qualche secondo.</string>
    <string name="tripstart_selfClosePopup">La corsa si chiuderà gratuitamente dopo 5 minuti se non sarà inserito il PIN</string>
    <string name="login_fillfields_label">Compila i campi per effettuare il login</string>
    <string name="login_email_placeholder">email</string>
    <string name="login_password_placeholder">password</string>
    <string name="login_forgetpassword_action">Ho dimenticato la password</string>
    <string name="login_login_action">Login</string>
    <string name="login_notregistered_label">Non sei ancora iscritto?</string>
    <string name="login_register_action">Registrati</string>
    <string name="login_continue_action">Continua senza loggarti</string>
    <string name="login_emptyfields_alert">Uno o più campi non sono compilati.</string>
    <string name="login_wrongemail_alert">Attenzione! L\'indirizzo email che hai inserito non è presente nel nostro database.</string>
    <string name="login_wrongpassword_alert">Attenzione! Password errata.</string>
    <string name="login_userdisabled_alert">Attenzione! L\'utente non è abilitato per l\'accesso.</string>
    <string name="login_enabled_alert">Non puoi effettuare il login perché c\'è un problema con il tuo profilo. Verificalo sul sito o contatta il Servizio Clienti</string>
    <string name="signup_title_label">Iscriviti a Share\'ngo</string>
    <string name="signup_description_label">L\'iscrizione al servizio è gratuita. Se serve aiuto durante l\'iscrizione usa il pulsante chat!</string>
    <string name="signup_subscribe_action">ISCRIVITI</string>
    <string name="signup_step1text1_action">Per iscriverti devi avere\na portata di mano:</string>
    <string name="signup_step1text2_action">CARTA DI IDENTITÀ</string>
    <string name="intro_power_label">Elettrica</string>
    <string name="intro_shared_label">Condivisa</string>
    <string name="intro_underhouse_label">Sotto\ncasa</string>
    <string name="settings_title_label">Impostazioni</string>
    <string name="settings_city_action">Imposta città</string>
    <string name="settings_address_action">Imposta i tuoi indirizzi preferiti</string>
    <string name="settings_lang_action">Imposta lingua</string>
    <string name="settingsaddress_new_action">Imposta nuovo indirizzo</string>
    <string name="settingsaddress_empty_title">Peccato!</string>
    <string name="settingsaddress_empty_description">Non hai ancora nessun indirizzo preferito o recente! Imposta le tue destinazioni più frequenti e risparmia tempo quando scegli dove andare.</string>
    <string name="settingsaddress_edittitle_label">Vuoi modificare questo indirizzo preferito?</string>
    <string name="settingsaddress_editname_label">nome preferito</string>
    <string name="settingsaddress_editaddress_label">imposta indirizzo</string>
    <string name="settingsaddress_editok_label">Ok</string>
    <string name="settingsaddress_editcancel_label">Annulla</string>
    <string name="share_title_label">Invita un amico</string>
    <string name="share_invitefriend_label">Invita un amico e guadagna minuti!</string>
    <string name="share_timeregister_label">Al momento dell\'iscrizione</string>
    <string name="share_tenminutes_label">riceverà 10 minuti di guida gratuita</string>
    <string name="share_giftwelcome_label">come omaggio di benvenuto.</string>
    <string name="share_friendregistration_label">Per ogni amico che si iscriverà\ngrazie al tuo invito</string>
    <string name="share_twentyminutes_label">riceverai 20 minuti di guida gratuita!</string>
    <string name="share_invite_button">Invita subito</string>
</resources>