<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="@dimen/hdx_toolbarHeight"
    android:orientation="vertical">

    <!-- Title -->
    <it.sharengo.development.ui.components.CustomTextView
        android:id="@+id/userPinTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/darkjunglegreen"
        app:font_name="poppinsBold"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/settings_title_label"/>

    <!-- Imposta città -->
    <RelativeLayout
        android:id="@+id/cityButton"
        style="@style/settings_box"
        android:background="@color/whitesmoke">

        <LinearLayout
            style="@style/settings_box_center">
            <ImageView
                android:id="@+id/cityImageView"
                style="@style/settings_box_icon"
                android:src="@drawable/ic_imposta_citta"/>
            <it.sharengo.development.ui.components.CustomTextView
                style="@style/settings_box_title"
                app:font_name="poppinsBold"
                android:text="@string/settings_city_action" />
        </LinearLayout>

    </RelativeLayout>

    <!-- Imposta indirizzi preferiti -->
    <RelativeLayout
        android:id="@+id/addressButton"
        style="@style/settings_box">

        <LinearLayout
            style="@style/settings_box_center">
            <ImageView
                android:id="@+id/addressImageView"
                style="@style/settings_box_icon"
                android:src="@drawable/ic_imposta_indirizzi"/>
            <it.sharengo.development.ui.components.CustomTextView
                style="@style/settings_box_title"
                app:font_name="poppinsBold"
                android:text="@string/settings_address_action" />
        </LinearLayout>

    </RelativeLayout>

    <!-- Imposta indirizzi preferiti -->
    <RelativeLayout
        android:id="@+id/langButton"
        style="@style/settings_box"
        android:background="@color/whitesmoke">

        <LinearLayout
            style="@style/settings_box_center">
            <ImageView
                android:id="@+id/langImageView"
                style="@style/settings_box_icon"
                android:src="@drawable/ic_imposta_lingua"/>
            <it.sharengo.development.ui.components.CustomTextView
                style="@style/settings_box_title"
                app:font_name="poppinsBold"
                android:text="@string/settings_lang_action" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>