<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/introGifLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/introGifImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>
        <!--android:src="@drawable/intro_long_part1"-->

    <it.sharengo.eteria.ui.components.CustomTextView
        android:id="@+id/introTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:textColor="@color/mediumseagreen"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/intro_power_label" />

    <it.sharengo.eteria.ui.components.CustomTextView
        android:id="@+id/intro2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textColor="@color/mediumseagreen"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/intro_shared_label" />

    <it.sharengo.eteria.ui.components.CustomTextView
        android:id="@+id/intro3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textColor="@color/mediumseagreen"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/intro_underhouse_label" />

</RelativeLayout>