<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_margin="20dp"
        android:background="#000000"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!-- Title -->
        <it.sharengo.development.ui.components.CustomTextView
            android:id="@+id/editTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:font_name="poppinsRegular"
            android:text="@string/settingsaddress_edittitle_label"/>

        <!-- Nome -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            style="@style/form_inputlayoutwhite"
            app:font_name="poppinsRegular">

            <it.sharengo.development.ui.components.CustomEditText
                android:id="@+id/nameEditText"
                style="@style/form_input"
                app:font_name="poppinsRegular"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/settingsaddress_editname_label"/>

        </android.support.design.widget.TextInputLayout>

        <!-- Indirizzo -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressInputLayout"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/form_inputlayoutwhite"
            android:textColorHint="@color/white"
            app:font_name="poppinsRegular">

            <it.sharengo.development.ui.components.CustomEditText
                android:id="@+id/addressEditText"
                style="@style/form_input"
                app:font_name="poppinsRegular"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/settingsaddress_editaddress_label"/>

        </android.support.design.widget.TextInputLayout>


        <!-- Ok Button -->
        <it.sharengo.development.ui.components.CustomButton
            android:id="@+id/okSaveButton"
            style="@style/button_primary"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/settingsaddress_editok_label"/>

        <!-- Cancel Button -->
        <it.sharengo.development.ui.components.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:font_name="poppinsBold"
            android:text="@string/settingsaddress_editcancel_label"/>

    </LinearLayout>


</RelativeLayout>