<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addressLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_mizzie2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <it.sharengo.development.ui.components.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/mediumseagreen"
            android:textAlignment="center"
            app:font_name="poppinsBold"
            android:text="@string/settingsaddress_empty_title"/>

        <it.sharengo.development.ui.components.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:textColor="@color/darkjunglegreen"
            android:textAlignment="center"
            app:font_name="poppinsRegular"
            android:text="@string/settingsaddress_empty_description"/>

    </LinearLayout>

    <it.sharengo.development.ui.components.CustomButton
        android:id="@+id/newAddressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mediumseagreen"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:font_name="poppinsBold"
        android:text="@string/settingsaddress_new_action" />

</LinearLayout>